Bug: z-index fix

--- a/src/app/components/view/view.component.scss
+++ b/src/app/components/view/view.component.scss
@@ -219,7 +219,7 @@
             thead {
                 position: sticky;
                 top: 0;
-                z-index: 2;
+                z-index: 1;
                 background-image: linear-gradient(195deg, #42424a 0%, #191919 100%);
                 color: white;
             }
